--- a/EssentialsSpawn/src/plugin.yml
+++ b/EssentialsSpawn/src/plugin.yml
@@ -1,12 +1,12 @@
 # This determines the command prefix when there are conflicts (/name:home, /name:help, etc.)
-name: EssentialsSpawn
+name: UMC-EssentialsSpawn
 main: com.earth2me.essentials.spawn.EssentialsSpawn
 # Note to developers: This next line cannot change, or the automatic versioning system will break.
 version: TeamCity
 website: http://tiny.cc/EssentialsCommands
 description: Provides spawn control commands, utilizing Essentials.
 authors: [Zenexer, ementalo, Aelux, Brettflan, KimKandor, snowleo, ceulemans, Xeology, KHobbits]
-depend: [Essentials]
+depend: [UMC-Essentials]
 commands:
   setspawn:
     description: Set the spawnpoint to your current position.
